Updates from Overleaf

--- a/thesis/paper/sections/3_solution/index.tex
+++ b/thesis/paper/sections/3_solution/index.tex
@@ -11,7 +11,7 @@ Rather than rendering a simple static view, it performs some tasks such as accep
 
 \begin{figure}
   \centering
-  \includegraphics[width=9.2cm]{thesis/paper/images/how_it_works.pdf}
+  \includegraphics[width=13cm]{thesis/paper/images/how_it_works.pdf}
   \caption{A diagram showing the general workings of Intertext}%
   \label{fig:how_intertext_works}%
 \end{figure}
@@ -43,6 +43,7 @@ Intertext aims to support multiple software clients (at the time of this paper, 
 
 % - intertext uidl
 %   - terminologies? (platform-specific etc.)
+%   - limitations?
 %   - json? xml?
  
 % - clients
