--- a/thesis/paper/sections/4_implementation/index.tex
+++ b/thesis/paper/sections/4_implementation/index.tex
@@ -4,3 +4,14 @@
 
 - Implementation specific things
 - How implemented
+
+
+- IUIDL
+  - components
+  - layout
+
+- Engine
+  - parsing
+  
+- Web
+- CLI
