--- a/thesis/paper/sections/7_discussion/index.tex
+++ b/thesis/paper/sections/7_discussion/index.tex
@@ -2,6 +2,8 @@
 
 \chapter{Discussion} \label{discussion}
 
+\input{sections/7_discussion/futureWork}
+
 - Sum up main contributions
 - How you address the research questions
 - Future work
