--- a/thesis/paper/thesis.tex
+++ b/thesis/paper/thesis.tex
@@ -13,6 +13,10 @@
 \usepackage{float}
 \usepackage{template/cisa}
 
+\input{thesis/paper/utils/json-lang}
+\input{thesis/paper/utils/xml-lang}
+\input{thesis/paper/utils/javascript-lang}
+
 \author{Oguz Gelal}
 \level{ma2}
 \title{Intertext}
