--- a/thesis/paper/sections/3_solution/intertextUIDL.tex
+++ b/thesis/paper/sections/3_solution/intertextUIDL.tex
@@ -170,4 +170,4 @@ Last thing to mention in this section is the terminology used in IUIDL. IUIDL sy
 
 Our immediate reaction to solve this problem was to create custom jargon that is agnostic of device / interaction type, just like IUIDL is by nature, and find terms for every component / interaction that applies globally. For instance, instead of "button" we used "callToAction", and instead of "onClick" we used "onPrimaryInteraction". However we later abandoned this approach for the sake of developer friendliness. As we custom-named components and their respective actions, we realised that their names were getting very unusual and non-familiar, to a point where it was very difficult to even recognise them. Should we have chosen the global naming convention, we would have introduced a steep learning curve; developers would have needed to get familiar with a long list of terms that they have never heard of before, and they would strictly need to follow the documentation while building Intertext applications.
 
-Instead, we decided to adopt the terminology for desktop / web environments. The rationale behind this decision was that these environments have been around for a very long time, that the terms used to build desktop applications and web applications has a strong recognition among many developers. Also, terms used for desktop environments were mostly generic enough that it was easy to represent on other environments. For instance, a "button" is a component to be interacted with that performs an action, and "click" is the method of primary interaction with that component. We can easily take this description and replicate on any environment to create an optimised version of "button" taking the limitations of the host platforms in mind.
+Instead, we decided to adopt the terminology for desktop / web environments. The rationale behind this decision was that these environments have been around for a very long time, that the terms used to build desktop applications and web applications has a strong recognition among many developers. Also, terms used for desktop environments were mostly generic enough that it was easy to represent on other environments. For instance, a "button" is a component to be interacted with that performs an action, and "click" is the method of primary interaction with that component. We can easily take this as a given to replicate it on any environment and create an optimised version taking the limitations of the host platforms in mind.
