--- a/thesis/paper/sections/7_discussion/futureWork.tex
+++ b/thesis/paper/sections/7_discussion/futureWork.tex
@@ -7,3 +7,6 @@
 - more intertext clients
 - more themes
 - user-made themes
+
+- refined control on persisted storage (expiration dates)
+- cross-origin storage read
