--- a/thesis/paper/utils/xml-lang.tex
+++ b/thesis/paper/utils/xml-lang.tex
@@ -16,7 +16,7 @@
 {
   morestring=[b]",
   morestring=[s]{>}{<},
-  morecomment=[s]{<?}{?>},
+  morecomment=[s]{<!--}{-->},
   stringstyle=\color{string},
   identifierstyle=\color{darkblue},
   keywordstyle=\color{cyan},
