Updates from Overleaf

--- a/thesis/paper/bibliography.bib
+++ b/thesis/paper/bibliography.bib
@@ -151,3 +151,18 @@
   author={Eisfeld, Henriette and Kristallovich, Felix},
   year={2020}
 }
+
+@online{FacebookYoga,
+  title = {Yoga Layout Engine},
+  url = {https://yogalayout.com/},
+}
+
+@online{FlexSpec1,
+  title = {CSS Flexible Box Layout Module Level 1},
+  url = {https://www.w3.org/TR/css-flexbox-1/},
+}
+
+@online{FlexSpec2,
+  title = {MDN Basic concepts of flexbox},
+  url = {https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Flexible_Box_Layout/Basic_Concepts_of_Flexbox},
+}
